--- a/ProjectEuropa/ProjectEuropa.vcxproj.filters
+++ b/ProjectEuropa/ProjectEuropa.vcxproj.filters
@@ -18,13 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Logic.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
     <ClCompile Include="MyRenderWindow.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="AllTheThingsThatImTooLazyToMakeFilesFor.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
@@ -33,21 +27,27 @@
     <ClCompile Include="Animation.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="Logic.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoringGlobals.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Logic.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MyRenderWindow.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="AllTheThingsThatImTooLazyToMakeFilesFor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Logic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoringGlobals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
